--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       background: #ffd24d;
     }
     .admin-panel {
-      position: fixed;
+      position: absolute;
       top: 66px;
       right: 30px;
       width: 350px;
